--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
   - type: web
     name: codeareana-app
     rootDir: client
+    env: static
     buildCommand: npm install && npm run build
     staticPublishPath: dist
     routes:
